--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,25 @@
 # data source
-spring.datasource.url=jdbc:postgresql://localhost:5430/postgres
-spring.datasource.username=postgres
-spring.datasource.password=mysecretpassword
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.datasource.url=jdbc:postgresql://localhost:5430/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=mysecretpassword
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#
+#server.port=8086
+#
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.hibernate.ddl-auto=update
 
-server.port=8086
+# data source
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:blog-userAccountApi
+spring.datasource.username=sa
+spring.datasource.password=
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# jpa
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 
-## data source
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.url=jdbc:h2:mem:blog-userAccountApi
-#spring.datasource.username=sa
-#spring.datasource.password=
-#
-## jpa
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.jpa.hibernate.ddl-auto=update
-#
-## h2
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console
+# h2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
