--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				
 			</plugin>
 
 			<plugin>
@@ -102,6 +101,15 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>3.2.2</version>
+				<configuration>
+					<skipITs>true</skipITs>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
