--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,6 +1,6 @@
 # data source
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:blog-userAccountApi
+spring.datasource.url=jdbc:h2:mem:userAccountApi
 spring.datasource.username=sa
 spring.datasource.password=
 
@@ -11,3 +11,5 @@ spring.jpa.hibernate.ddl-auto=update
 # h2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+server.port=8086
