--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   database:
     image: postgres
     environment:
-      POSTGRES_PASSWORD: password123
+      POSTGRES_PASSWORD: postgres
       POSTGRES_DB: postgres
     volumes:
     - db-volume:/var/lib/postgresql/data
