--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,26 @@
-## data source
-#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-#spring.datasource.username=postgres
-#spring.datasource.password=password123
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#
-#server.port=8086
-#
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.hibernate.ddl-auto=update
-
 # data source
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:userAccountApi
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=password123
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# jpa
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+server.port=8086
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-# h2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+## data source
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:userAccountApi
+#spring.datasource.username=sa
+#spring.datasource.password=
+#
+## jpa
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.hibernate.ddl-auto=update
+#
+## h2
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
