--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # data source
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=password123
+spring.datasource.password=postgres
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.driver-class-name=org.postgresql.Driver
