--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,7 @@
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<version>3.2.2</version>
 				<configuration>
-					<skipITs>true</skipITs>
+					<skipITs>false</skipITs>
 				</configuration>
 			</plugin>
 		</plugins>
