fix: jenkins file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,7 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:blog-userAccountApi
 spring.datasource.username=sa
 spring.datasource.password=
+webAllowOthers=true
 
 # jpa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
