--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@
 
 # data source
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:blog-userAccountApi
+spring.datasource.url=jdbc:h2:mem:blog-userAccountApi;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;webAllowOthers=true
 spring.datasource.username=sa
 spring.datasource.password=
 webAllowOthers=true
