fix: jenkins file

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,8 +1,9 @@
 # data source
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:userAccountApi
+spring.datasource.url=jdbc:h2:mem:blog-userAccountApi;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;webAllowOthers=true
 spring.datasource.username=sa
 spring.datasource.password=
+webAllowOthers=true
 
 # jpa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
@@ -11,5 +12,3 @@ spring.jpa.hibernate.ddl-auto=update
 # h2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-
-server.port=8086
