--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -4,6 +4,7 @@ spring.datasource.url=jdbc:h2:mem:blog-userAccountApi;DB_CLOSE_DELAY=-1;DB_CLOSE
 spring.datasource.username=sa
 spring.datasource.password=
 webAllowOthers=true
+spring.h2.console.settings.web-allow-others=true
 
 # jpa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
