fix: jenkins file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,11 +13,9 @@
 
 # data source
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:blog-userAccountApi;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;webAllowOthers=true
+spring.datasource.url=jdbc:h2:mem:blog-userAccountApi
 spring.datasource.username=sa
 spring.datasource.password=
-webAllowOthers=true
-spring.h2.console.settings.web-allow-others=true
 
 # jpa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
