fix: jenkins file

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,12 +1,12 @@
 # data source
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:blog-userAccountApi;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;webAllowOthers=true
+spring.datasource.url=jdbc:h2:mem:blog-userAccountApi
 spring.datasource.username=sa
 spring.datasource.password=
 
 # jpa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 # h2
 spring.h2.console.enabled=true
