--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,7 @@
 				<configuration>
 					<skipITs>false</skipITs>
 				</configuration>
-			</plugin>
+			</plugin><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>11</source><target>11</target></configuration></plugin>
 		</plugins>
 	</build>
 
